Form UI distort fix

--- a/src/app/main/apps/job-definition/Job-Definition/JobDefinitionFileList.css
+++ b/src/app/main/apps/job-definition/Job-Definition/JobDefinitionFileList.css
@@ -40,3 +40,8 @@ display: none;
   /* .sort-arrow1:hover{
     opacity: 1;
   } */
+
+  .MuiGrid-spacing-xs-1 {
+    width: 100% !important;
+    margin: auto !important;
+  }
